[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.79"
enum-map = "2.0.3"
strum_macros = "0.24"
strum = "0.24"

[[bin]]
name = "gateway"
path = "src/main.rs"
