[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.79"
enum-map = "2.0.3"
strum_macros = "0.25"
strum = "0.24"
itertools = "0.10.3"
# websocket
tokio = { version = "1.17.0", features = ["full"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
url = "2.2.2"
futures-util = "0.3.21"
reqwest = "0.11.10"

[[bin]]
name = "gateway"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3               # all optimizations
overflow-checks = false     # Disable integer overflow checks.
codegen-units = 1
target-cpu = "native" # optimize for current CPU instruction set